# roboArm

./: .gitattributes  .gitignore  pyproject.toml  requirements.txt
brain/: config.py  integration_test.py  main.py
brain/arduino/: __init__.py  arduino_controller.py  executor.py  seralizer.py  status_monitor.py
brain/camera/: camera.py
brain/intent/: intent_classifier.py  schema.py  step_types.py  task_builder.py  task_planner.py
brain/inverse_kinematics/: _ikpy_urdf_cache.urdf  ikpy_plot.py  ikypy_config.py  kinematics.py  trajectory.py
brain/path-planner/: path_planner.py
brain/speech/: text_to_speech.py  voice.py
brain/tests/: conftest.py  test_arduino_controller.py  test_camera.py  test_intent_classifier.py  test_kinematics.py  test_main.py  test_path_planner.py  test_schema.py  test_serial.py  test_step_types.py  test_task_planner.py  test_text_to_speech.py  test_train.py  test_voice.py
brain/threads/: __init__.py  audio_thread.py  camera_thread.py  command_thread.py  intent_thread.py  message_types.py  robot_thread.py
brain/utils/: __init__.py  module_loader.py
cads/: gripper_assembly.urdf  main_assembly.urdf
cads/arm/: arm_link.stl  base.stl  base_waist.stl  shoulder.stl
cads/gripper_assembly/: gripper_1.stl  gripper_2.stl  gripper_3.stl  gripper_4.stl  gripper_5.stl  gripper_6.stl
firmware/: arduino.ino
